--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Simple HTML Template</title>
+  <title>Pop-up test</title>
   <meta name="description" content="A clean, simple, responsive HTML template." />
   <style>
     :root{--bg:#f7f8fb;--card:#ffffff;--accent:#2563eb;--muted:#6b7280;--radius:10px}
