--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
   <script>
     // Small script to insert the current year
     document.getElementById('year').textContent = new Date().getFullYear();
+
+    <script>!function(e,t,a){var c,n=e.getElementsByTagName(t)[0];e.getElementById("lf-"+a)||((c=e.createElement(t)).id="lf-"+a,c.async=!0,c.src="https://popup.campaign.playable.com/script/969199d8cebbfd95e88886c71f6161ab/popup.min.js",n.parentNode.insertBefore(c,n))}(document,"script","969199d8cebbfd95e88886c71f6161ab");</script>
   </script>
   
 </body>
