--- a/index.html
+++ b/index.html
@@ -90,6 +90,12 @@
           </form>
         </div>
       </section>
+
+<script src="https://app.playable.com/campaign/sdk/utilities.responsive_iframe.min.js"></script>
+    
+    <iframe title="Wheel of fortune - January 2026" src="https://docmorris.campaign.playable.com/wheel-of-fortune-january-2026?iframe=dontbreakout" style="border:none;width:100%;height:500px;"  scrolling="no" allow="autoplay; fullscreen"></iframe>
+
+      
     </main>
 
     <footer>
